--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "my first socket.io app",
   "dependencies": {
+    "asciidoctor-cli": "^1.5.5-beta.3",
     "express": "^4.15.2",
     "node-localdb": "0.0.3",
     "socket.io": "^2.0.3",
