--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "bcrypt": "^1.0.2",
     "express": "^4.15.2",
     "node-localdb": "0.0.3",
-    "socket.io": "^2.0.3",
-    "uuid": "^3.1.0"
+    "socket.io": "^2.0.3"
   }
 }
